--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
     <h2>Contact</h2>
     <p>
-        Email: <a href="mailto:AdaezeOdenigbo@gmail.com">
-       AdaezeOdenigbo.com</a>
+        Email: <a href="mailto:adaezeodenigbo023@gmail.com">
+       adaezeodenigbo023.com</a>
     </p>
 
 </body>
